# ls-f

./: .gitignore  BENCHMARKS.md  BRANCH_PROTECTION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION_SUMMARY.md  INSTALL.md  INSTALL_FIXES.md  LICENSE  Makefile  QUICK_REFERENCE.md  README.md  RELEASE_NOTES.md  SECURITY.md  codecov.yml  column.py  deny.toml  index.html  install-standalone.sh  install.sh  ls-material.sh  lsf  tag_release.sh  test_lsf.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  release.yml  test.yml
config/: lsf_alias_setup.sh
docs/: CONFIGURATION.md  INSTALLATION.md  TROUBLESHOOTING.md
src/: cli.rs  entry.rs  format.rs  git.rs  grid.rs  icons.rs  main.rs  output.rs
tools/: release.sh
