[package]
name = "lsf"
version = "5.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["swadhinbiswas"]
description = "A beautiful ls replacement with Nerd Font icons, git status, and colors"
license = "MIT"
repository = "https://github.com/swadhinbiswas/ls-f"
homepage = "https://swadhinbiswas.github.io/ls-f/"
documentation = "https://github.com/swadhinbiswas/ls-f#readme"
readme = "README.md"
keywords = ["ls", "cli", "icons", "nerd-font", "terminal"]
categories = ["command-line-utilities"]
exclude = [
    "docs/",
    "index.html",
    "tools/",
    "lsf",
    "column.py",
    "install.sh",
    "install-standalone.sh",
    "test_flags.sh",
    "screenshots/",
    ".github/",
    "codecov.yml",
    "RELEASE_NOTES.md",
]

[[bin]]
name = "lsf"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
terminal_size = "0.4"
chrono = "0.4"
uzers = "0.12"
libc = "0.2"
unicode-width = "0.2"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
